--- a/src/sass/04-pages/_home.sass
+++ b/src/sass/04-pages/_home.sass
@@ -19,12 +19,7 @@
                 .iz-img, .de-img
                     width: 100%
                     height: 100%
-                    display: none
-                    background-size: cover
-                    background-position: center
-                    &:first-child
-                        display: block
-
+                    object-fit: cover
         .word
             width: 350px
             position: absolute
