--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,11 @@
 
 @import "02-general/reset";
 @import "02-general/general";
+@import "02-general/core";
+@import "02-general/animate";
+@import "02-general/lazyload";
+@import "02-general/autoheight";
+@import "02-general/owl.carousel";
 
 
 
