--- a/src/_partials/footer.pug
+++ b/src/_partials/footer.pug
@@ -1,5 +1,24 @@
 #footer
-  h1 footer
+  .contenedor.footer
+    .element.icono
+      img(src="/img/icono.svg", alt="")
+    .element.descr
+      p Somos una empresa inmobiliaria con una visión integral, enfocada en desarrollos sustentables de alto valor social y económico. 
+    .element.direccion
+      p Padre Mier Nº578 Ote  |  64000 Obispado  |  Monterrey, NL
+      a(href="te:+52818130 1000") T +52 (81) 8130 1000 | 
+      a(href="mailto:contacto@byastra.com") contacto@byastra.com
+    .element.social
+      ul
+        li
+          a(href="#") Instagram
+        li
+          a(href="#") Facebook
+        li
+          a(href="#") Twitter
+    .element.copy
+      p ® Astra 2020
 
   
 script(src="/js/script.js")
+script(type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js")
