--- a/src/_partials/menu.pug
+++ b/src/_partials/menu.pug
@@ -1,18 +1,44 @@
 #menu
-  .left
-    a(href="/").icon
-      img(src="./img/icono.svg", alt="Astra")
-    .description
-      p Somos una empresa inmobiliaria con una visión integral, enfocada en desarrollos sustentables de alto valor social y económico. 
-  .center
+  .desk
+    .left
+      a(href="/").icon
+        img(src="./img/icono.svg", alt="Astra")
+      .description
+        p Somos una empresa inmobiliaria con una visión integral, enfocada en desarrollos sustentables de alto valor social y económico. 
+    .center
+      a(href="/").logo
+        img(src="./img/logo.svg", alt="Astra")
+    .right
+      ul.links
+        li
+          a(href="nosotros.html") Nosotros
+        li
+          a(href="proyectos.html") Proyectos
+        li
+          a(href="contacto.html") Contacto
+  .mov
+    .hamburger
+      .line
+      .line
+      .line
+    .links
+      ul 
+        li
+          a(href="nosotros.html") Nosotros
+        li
+          a(href="proyectos.html") Proyectos
+        li
+          a(href="contacto.html") Contacto
     a(href="/").logo
-      img(src="./img/logo.svg", alt="Astra")
-  .right
-    ul.links
-      li
-        a(href="#") Nosotros
-      li
-        a(href="#") Proyectos
-      li
-        a(href="#") Contacto
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 358.07 120">
+        <defs>
+        <style>.cls-1{fill:#1d1d1b;}</style>
+        </defs>
+        <title>Recurso 1</title>
+        <g id="Capa_2" data-name="Capa 2">
+          <g id="Layer_1" data-name="Layer 1">
+            <path class="cls-1" d="M69.53,109.13c-6.13-.61-6-8-6-13.76V55.45c0-7.54,0-14.65-6.06-19.7S42,29.69,35.23,29.69c-9.95,0-31.77,4.93-31.77,19.57,0,4,2.82,6.63,7.18,6.63,5.79,0,7.71-2.85,9.24-8.11C21.51,41.42,25,32.9,36.14,32.9c14.13,0,14.13,15.61,14.13,20.73V66.79S0,70.8,0,99.71C0,111.84,8.08,120,20.11,120c17.29,0,30.16-13.33,30.16-13.33s.87,11.73,11.37,11.73c7.89,0,13.42-6.27,17.36-12l-2.59-1.9S73.44,109.53,69.53,109.13Zm-40.31,4c-8.5,0-14.68-6.48-14.68-15.41C14.54,75.92,50.27,70,50.27,70v32.28S40,113.11,29.22,113.11ZM118.8,66c-13.23-4.14-25.22-8.31-25.22-19.29,0-8.5,9.35-13.81,16.93-13.81,15.79,0,26.06,15.41,33.3,24.71l2.82-1.53L137.82,31.3c-9,7.38-14-1.61-26.29-1.61-14.13,0-27.21,9.36-27.21,24.49C84.32,71,100,75.93,115.25,80.66c13.23,4.12,25.71,8,25.71,19.77,0,9-7.57,16.36-17.17,16.36-14.51,0-31.45-15.72-38.44-26.58l-2.87,1.44L93.37,118.4A14.22,14.22,0,0,1,103.71,115c4.68.46,11,5,20.07,5,13.38,0,27-10.73,27-26.12C150.77,76.53,133.89,70.72,118.8,66Zm236.69,38.54s-3.16,4.59-6,4.59c-6.85,0-6.85-8.95-6.85-13.76V55.45c0-7.54,0-14.65-6.06-19.7s-15.45-6.06-22.24-6.06c-10,0-31.77,4.93-31.77,19.57,0,4,2.82,6.63,7.18,6.63,5.78,0,7.71-2.85,9.24-8.11,1.62-6.36,5.08-14.88,16.25-14.88,14.13,0,14.13,15.61,14.13,20.73V66.79s-50.26,4-50.26,32.92c0,12.13,8.08,20.29,20.11,20.29,17.28,0,30.24-13.33,30.24-13.33s.78,11.73,11.28,11.73c7.9,0,13.43-6.27,17.36-12Zm-47.2,8.57c-8.5,0-14.67-6.48-14.67-15.41,0-21.78,35.72-27.71,35.72-27.71v32.28S319.12,113.11,308.29,113.11Zm-122.86-.85C178,110.42,178,102.34,178,94.91V34.5h23.89V31.3H178V0h-4.2C172,13.71,163.7,26.41,152.53,31.3v3.2H164.7V94.91c0,13.09,0,25.09,16.15,25.09,9.36,0,16-4.3,23.93-13.16l-2.1-2.42C198.13,109,192.88,114.09,185.43,112.26ZM267,29.69c-17.93,0-29.19,19.07-31.25,24.46V29.69L208.5,40.11v3.21c11.05.36,14,4.12,14,15.68V94.83c0,16.55-2,18.76-14,20.36v3.21H250v-3.21c-12.2-1.59-14.19-3.8-14.19-20.36l.07-26.48c0-11.6,6.69-25.39,19.42-25.39,6.68,0,7.87,2.88,13.77,2.88C280.78,45.84,279.06,29.69,267,29.69Z"/>
+          </g>
+        </g>
+      </svg>
 
