--- a/src/sass/03-elements/_anchor.sass
+++ b/src/sass/03-elements/_anchor.sass
@@ -1,2 +1,26 @@
 a
     color: $black
+    text-transform: uppercase
+.cta
+    background: none
+    border-radius: 25px
+    padding: 10px 20px
+    border: solid 1px black
+    display: inline-block
+    position: relative
+    text-align: center
+    transition: all 350ms ease-in-out
+    font-family: $neue-regular
+    &:hover
+        background: $black
+        color: $white
+        transition: all 350ms ease-in-out
+
+.projects
+        .half
+            ul
+            text-align: center
+            li
+                a
+                    font-size: 2.5rem
+                    text-align: center
