--- a/src/sass/04-pages/_home.sass
+++ b/src/sass/04-pages/_home.sass
@@ -1,4 +1,5 @@
 #home
+    background-color: $gray
     .home
         margin-top: 120px
         background: $gray
@@ -26,4 +27,44 @@
             top: 50%
             left: 50%
             transform: translate(-50%,-50%)
-        
+    .projects
+        .half
+            margin-bottom: 50px
+            .element.bg
+                display: flex
+                flex-direction: column
+                justify-content: space-between
+                background-position: center
+                background-size: cover
+                .img
+                    svg
+                        width: 150px
+                        margin: 0 auto
+@media (max-width: 990px)
+    #home
+        background-color: $gray
+        .home
+            margin-top: 80px
+            height: calc(100vh - 80px)
+@media (max-width: 750px)
+    #home
+        background-color: $gray
+        .home
+            .overlay
+                height: 100%
+                width: 100%
+                display: flex
+                flex-direction: row
+                overflow: hidden
+                background: black
+                .izquierda
+                    width: 100%
+                .derecha
+                    display: none
+                
+            .word
+                width: 350px
+                position: absolute
+                top: 50%
+                left: 50%
+                transform: translate(-50%,-50%)
