--- a/src/proyectos.pug
+++ b/src/proyectos.pug
@@ -19,12 +19,12 @@ html
         .proyectos
             .contenedor.half
                 .element.text#1
-                    a(href="#") nativa
+                    a(href="proyecto.html") nativa
                 .element.text#2
-                    a(href="#") la escondida
+                    a(href="proyecto.html") la escondida
                 .element.text#3
-                    a(href="#") Proyecto x
+                    a(href="proyecto.html") Proyecto x
                 .element.text#4
-                    a(href="#") proyecto x
+                    a(href="proyecto.html") proyecto x
             
         include _partials/footer
