--- a/src/_partials/footer.pug
+++ b/src/_partials/footer.pug
@@ -5,9 +5,9 @@
     .element.descr
       p Somos una empresa inmobiliaria con una visión integral, enfocada en desarrollos sustentables de alto valor social y económico. 
     .element.direccion
-      p Padre Mier Nº578 Ote  |  64000 Obispado  |  Monterrey, NL
-      a(href="te:+52818130 1000") T +52 (81) 8130 1000 | 
-      a(href="mailto:contacto@byastra.com") contacto@byastra.com
+      p Padre Mier <span>Nº578 Ote</span>  |  <span>64000</span> Obispado  |  Monterrey, NL
+      .links
+        p <span>T</span> <a href="tel:8181301000"> +52 (81) 8130 1000</a>  |  <a href="mailto:contacto@byastra.com">contacto@byastra.com </a>
     .element.social
       ul
         li
