--- a/src/contacto.pug
+++ b/src/contacto.pug
@@ -10,15 +10,15 @@ html
         link(rel="stylesheet", href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")
         link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
     body
-      .container#contacto
+      .container#contacto.animsition
         include _partials/menu
         .contacto-lead
             h1 Ponte en contacto con nosotros.
         .contacto-grid
             .contenedor.half
-                .element.text
+                .element.text.di
                     p Padre Mier Nº578 Ote  |  64000 Obispado  |  Monterrey, NL
-                .element.text
+                .element.text.te
                     .links
                         p <span>T</span> <a href="tel:8181301000"> +52 (81) 8130 1000</a>  |  <a href="mailto:contacto@byastra.com">contacto@byastra.com </a>
             .contenedor.half
