--- a/src/index.pug
+++ b/src/index.pug
@@ -10,7 +10,7 @@ html
         link(rel="stylesheet", href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")
         link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
     body
-      .container#home
+      .container#home.animsition
         include _partials/menu
         .home
           .overlay
@@ -67,7 +67,7 @@ html
                     </g>
                   </svg>
             .element.text
-              h2 Ponte en contacto con nosotros.
+              h2 Ponte en contactocon nosotros.
               span
                 a(href="#").cta Contacto
             .element.form
