--- a/src/proyecto.pug
+++ b/src/proyecto.pug
@@ -10,7 +10,7 @@ html
         link(rel="stylesheet", href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")
         link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
     body
-      .container#proyecto
+      .container#proyecto.animsition
         include _partials/menu
         .full(style="background-image: url(/img/bg-03.png)")
             .contenedor
@@ -35,6 +35,8 @@ html
             .contenedor.half.de
                 .spects
                     .sp
+                        .x
+                            img(src="/img/x.png", alt="")
                         .spec
                             h2 Ubicación
                             p San Pedro Garza García, N.L.
