--- a/src/proyectos.pug
+++ b/src/proyectos.pug
@@ -10,7 +10,7 @@ html
         link(rel="stylesheet", href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")
         link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
     body
-      .container#proyectos
+      .container#proyectos.animsition
         include _partials/menu
         .lead
             .contenedor
