--- a/src/sass/03-elements/_anchor.sass
+++ b/src/sass/03-elements/_anchor.sass
@@ -11,6 +11,7 @@ a
     text-align: center
     transition: all 350ms ease-in-out
     font-family: $neue-regular
+    text-transform: uppercase
     &:hover
         background: $black
         color: $white
@@ -24,3 +25,9 @@ a
                 a
                     font-size: 2.5rem
                     text-align: center
+#menu
+    ul
+        li
+            a
+                text-transform: capitalize
+                font-size: 1.2rem
