--- a/src/sass/03-elements/_menu.sass
+++ b/src/sass/03-elements/_menu.sass
@@ -37,6 +37,15 @@
                 li
                     display: inline
                     margin-left: 20px
+@media (max-width: 1225px)
+    #menu
+        .desk
+            .left
+                width: 40%
+            .center
+                width: 20%
+            .right
+                width: 40%
 @media (max-width: 990px)
     .clicked
         height: 400px !important
