--- a/src/sass/04-pages/_contacto.sass
+++ b/src/sass/04-pages/_contacto.sass
@@ -19,6 +19,9 @@
             border-bottom: none !important
             &:last-child
                 border-top: none
+            .element.di, .element.te
+                text-align: center
+                height: 300px
             .element.text
                 display: flex
                 flex-direction: column
