--- a/src/sass/04-pages/_home.sass
+++ b/src/sass/04-pages/_home.sass
@@ -46,6 +46,7 @@
                 .img
                     svg
                         width: 150px
+                        height: 38px
                         margin: 0 auto
 @media (max-width: 990px)
     #home
@@ -70,7 +71,7 @@
                     display: none
                 
             .word
-                width: 350px
+                width: 250px
                 position: absolute
                 top: 50%
                 left: 50%
