--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 
 //03-elementos
 
+@import "03-elements/animsition";
 @import "03-elements/slider";
 @import "03-elements/grid";
 @import "03-elements/headings";
