--- a/src/_partials/menu.pug
+++ b/src/_partials/menu.pug
@@ -11,11 +11,11 @@
     .right
       ul.links
         li
-          a(href="nosotros.html") Nosotros
+          a(href="nosotros.html").animsition-link Nosotros
         li
-          a(href="proyectos.html") Proyectos
+          a(href="proyectos.html").animsition-link Proyectos
         li
-          a(href="contacto.html") Contacto
+          a(href="contacto.html").animsition-link Contacto
   .mov
     .hamburger
       .line
@@ -24,11 +24,11 @@
     .links
       ul 
         li
-          a(href="nosotros.html") Nosotros
+          a(href="nosotros.html").animsition-link Nosotros
         li
-          a(href="proyectos.html") Proyectos
+          a(href="proyectos.html").animsition-link Proyectos
         li
-          a(href="contacto.html") Contacto
+          a(href="contacto.html").animsition-link Contacto
     a(href="/").logo
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 358.07 120">
         <defs>
