--- a/src/nosotros.pug
+++ b/src/nosotros.pug
@@ -10,7 +10,7 @@ html
         link(rel="stylesheet", href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")
         link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
     body
-      .container#nosotros
+      .container#nosotros.animsition
         include _partials/menu
         .description-h
             .contenedor.half
