--- a/src/sass/04-pages/_nosotros.sass
+++ b/src/sass/04-pages/_nosotros.sass
@@ -11,10 +11,10 @@
         background: $gray
         .half
             height: calc(100vh - 120px)
-            border: none
             .element
                 width: 100%
                 height: 100%
+                border-bottom: none
                 h2
                     text-align: left
             .element.bg
@@ -50,6 +50,8 @@
                     text-align: left
                     .name
                         grid-column: 1/4
+                        h3
+                            font-family: $neue-light
                     .puesto
                         grid-column: 8/14
                     .arrow
@@ -75,6 +77,8 @@
                         grid-column: 1/4
                     .de
                         grid-column: 8/14
+                        p
+                            font-family: $neue-light
 @media (max-width: 990px)
     #nosotros
         #menu
@@ -92,9 +96,13 @@
             height: auto !important
             .half
                 height: auto !important
+                border-bottom: none !important
                 .element
                     width: 100%
                     height: 100%
+                    border-bottom: solid 1px $black
+                    &:last-child
+                        border-bottom: none
                 .element.bg
                     height: 500px !important
         .equipo
@@ -118,7 +126,7 @@
                         .name
                             grid-column: 1/7
                         .puesto
-                            grid-column: 8/14
+                            grid-column: 9/16
                         .arrow
                             grid-column: 16/17
                             justify-self: end
@@ -127,6 +135,7 @@
                                 width: 15px
                     .hei
                         height: 100% !important
+                        max-height: 900px !important
                         transition: all 350ms ease-in-out
                     .dos
                         height: 0
@@ -138,7 +147,8 @@
                         transition: all 350ms ease-in-out
                         .img
                             padding: 10px 0
-                            grid-column: 1/7
+                            grid-column: 1/9
                         .de
                             padding: 10px 0 20px
-                            grid-column: 8/16
+                            grid-row: 2/3
+                            grid-column: 1/17
