--- a/src/contacto.pug
+++ b/src/contacto.pug
@@ -17,7 +17,7 @@ html
         .contacto-grid
             .contenedor.half
                 .element.text.di
-                    p Padre Mier Nº578 Ote  |  64000 Obispado  |  Monterrey, NL
+                    p Padre Mier <span>Nº578 Ote</span>  |  <span>64000</span> Obispado  |  Monterrey, NL
                 .element.text.te
                     .links
                         p <span>T</span> <a href="tel:8181301000"> +52 (81) 8130 1000</a>  |  <a href="mailto:contacto@byastra.com">contacto@byastra.com </a>
