--- a/src/index.pug
+++ b/src/index.pug
@@ -35,21 +35,21 @@ html
             .element
               h1 Somos una empresa inmobiliaria con una visión integral, enfocada en desarrollos sustentables de alto valor social y económico. 
             span
-              a(href="#").cta Nosotros
+              a(href="nosotros.html").cta Nosotros
         .projects
           .contenedor.half
             .element.text
-              h2 Creamos comunidades logrando un balance entre la sociedad y el medio ambiente.
+              h2 Creamos comunidades logrando un balanceentre la sociedad y el medio ambiente.
               span
                 a(href="#").cta Ver Más
             .element.bg
               ul
                 li#first
-                  a(href="").link nativa
+                  a(href="proyecto.html").link nativa
                 li#second
-                  a(href="").link La escondida
+                  a(href="proyecto.html").link La escondida
                 li#third
-                  a(href="").link Proyecto x
+                  a(href="proyecto.html").link Proyecto x
               .img
                 svg
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192.27 48.87">
@@ -69,7 +69,7 @@ html
             .element.text
               h2 Ponte en contactocon nosotros.
               span
-                a(href="#").cta Contacto
+                a(href="contacto.html").cta Contacto
             .element.form
               form
                 .inputs
