--- a/src/proyecto.pug
+++ b/src/proyecto.pug
@@ -12,7 +12,7 @@ html
     body
       .container#proyecto.animsition
         include _partials/menu
-        .full(style="background-image: url(/img/bg-03.png)")
+        .full(style="background-image: url(/img/bg-03.jpg)")
             .contenedor
                 .element.text
                     h1 Nativa
@@ -68,11 +68,11 @@ html
         .carrusel
             #carrusel-items
                 .item
-                    img(src="/img/c-01.png", alt="")
+                    img(src="/img/c-01.jpg", alt="")
                 .item
-                    img(src="/img/c-02.png", alt="")
+                    img(src="/img/c-02.jpg", alt="")
                 .item
-                    img(src="/img/c-01.png", alt="")
+                    img(src="/img/c-01.jpg", alt="")
         .links
             .contenedor.links-c
                 .element-l
