--- a/src/sass/04-pages/_contacto.sass
+++ b/src/sass/04-pages/_contacto.sass
@@ -22,13 +22,16 @@
             .element.di, .element.te
                 text-align: center
                 height: 300px
+            .element.di
+                span 
+                    font-family: $century
             .element.text
                 display: flex
                 flex-direction: column
                 justify-content: center
                 align-items: center
                 p
-                    font-family: $neue-light
+                    font-family: $century
                 .links
                     span
                         font-family: $neue-light
@@ -43,7 +46,6 @@
                 display: block
                 position: relative
                 overflow: hidden
-                padding-top: 56.25%
                 iframe
                     position: absolute
                     top: 0
