--- a/src/sass/03-elements/_slider.sass
+++ b/src/sass/03-elements/_slider.sass
@@ -11,9 +11,10 @@
             border: none
             border-radius: 50%
             background: $white
-            width: 15px
-            height: 15px
+            width: 10px
+            height: 10px
             font-size: 0
+            padding: 0
     li.slick-active
         button
             opacity: .6
