--- a/src/sass/04-pages/_home.sass
+++ b/src/sass/04-pages/_home.sass
@@ -48,6 +48,11 @@
                         width: 150px
                         height: 38px
                         margin: 0 auto
+                ul
+                    li
+                        a
+                            &:hover
+                                text-decoration: underline
 @media (max-width: 990px)
     #home
         background-color: $gray
