--- a/src/sass/04-pages/_proyecto.sass
+++ b/src/sass/04-pages/_proyecto.sass
@@ -65,10 +65,12 @@
                     margin-top: 50px
                     margin-bottom: 50px
                 .x
-                    display: none
                     img
                         position: absolute
+                        top: 40px
+                        right: 40px
                         width: 20px
+                        cursor: pointer
             .lead
                 border-right: solid 1px $black
                 span
