--- a/src/_partials/footer.pug
+++ b/src/_partials/footer.pug
@@ -5,17 +5,17 @@
     .element.descr
       p Somos una empresa inmobiliaria con una visión integral, enfocada en desarrollos sustentables de alto valor social y económico. 
     .element.direccion
-      p Padre Mier <span>Nº578 Ote</span>  |  <span>64000</span> Obispado  |  Monterrey, NL
+      p Padre Mier <span>Nº578 </span>  |  Centro <span>64000</span>  |  Monterrey, NL
       .links
         p <span>T</span> <a href="tel:8181301000"> +52 (81) 8130 1000</a>  |  <a href="mailto:contacto@byastra.com">contacto@byastra.com </a>
     .element.social
       ul
-        li
-          a(href="#") Instagram
-        li
-          a(href="#") Facebook
-        li
-          a(href="#") Twitter
+        //- li
+        //-   a(href="#") Instagram
+        //- li
+        //-   a(href="#") Facebook
+        //- li
+        //-   a(href="#") Twitter
     .element.copy
       p ® Astra 2020
 
