--- a/src/index.pug
+++ b/src/index.pug
@@ -41,7 +41,7 @@ html
             .element.text
               h2 Creamos comunidades logrando un balanceentre la sociedad y el medio ambiente.
               span
-                a(href="#").cta Ver Más
+                a(href="proyectos.html").cta Ver Más
             .element.bg
               ul
                 li#first
@@ -68,8 +68,6 @@ html
                   </svg>
             .element.text
               h2 Ponte en contactocon nosotros.
-              span
-                a(href="contacto.html").cta Contacto
             .element.form
               form
                 .inputs
