--- a/src/nosotros.pug
+++ b/src/nosotros.pug
@@ -20,7 +20,7 @@ html
                 .element.lead
                     h1 ¿Qué buscamos crear en cada proyecto?
                 .element
-                    .par
+                    .par.list
                         p Crear desarrollos innovadores con el menor impacto ambiental.
                         br
                         br
